deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-backend-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: docker-backend
  template:
    metadata:
      labels:
        app: docker-backend
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: docker-backend
          image: ghcr.io/balintodab/docker-backend:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/years
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/years
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: docker-backend-cluster-ip-service
spec:
  selector:
    app: docker-backend
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - nbastars-backend.jcloud.jedlik.cloud
      secretName: docker-backend-certificate
  rules:
    - host: nbastars-backend.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-backend-cluster-ip-service
                port:
                  number: 3000
